--- a/package.json
+++ b/package.json
@@ -4,10 +4,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "C.js",
+  "module": "src/index.js",
+  "browser": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup --config -w"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "rollup": "^4.9.4",
+    "rollup-plugin-cleanup": "^3.2.1"
+  }
 }
