--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "rollup": "^4.9.4",
-    "rollup-plugin-cleanup": "^3.2.1",
+    "rollup-plugin-cleanup": "^3.2.1"
   }
 }
